--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Callum David O'Brien <cdo@teknik.io>"]
 edition = "2018"
 
 [dependencies]
+gpio = "0.4.1"
+rocket = { version = "0.4.2", default-features = false }
