--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Callum David O'Brien <cdo@teknik.io>"]
 edition = "2018"
 
 [dependencies]
-gpio-cdev = "0.2.0"
+xu4-hal = "0.1.1"
+embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
 rocket = { version = "0.4.2", default-features = false }
