--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ xu4-hal = "0.1.2"
 embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
 rocket = { version = "0.4.2", default-features = false }
 serde_json = "1.0.48"
+serial = "0.4.0"
