--- a/example/slave-config.json
+++ b/example/slave-config.json
@@ -2,12 +2,14 @@
     "pin1": {
         "type": "output-pin",
         "chip": "gpa2",
-        "line": 6
+        "line": 6,
+		"pin-type": "open-drain"
     },
     "pin2": {
         "type": "input-pin",
         "chip": "gpx2",
-        "line": 0
+        "line": 0,
+		"pin-type": "open-drain"
     },
     "uart": {
         "type": "serial",
