--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2018"
 license = "GPL-3.0-or-later"
 
 [dependencies]
-xu4-hal = "0.2.2"
 embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
-rocket = { version = "0.4.2", default-features = false }
+lazy_static = "1"
+regex = "1"
 serde_json = "1.0.48"
 serial = "0.4.0"
+tiny_http = "0.7.0"
+xu4-hal = "0.2.2"
+
+[dev-dependencies]
+ureq = "1.1.1"
