--- a/.build.yml
+++ b/.build.yml
@@ -1,14 +1,7 @@
-image: freebsd/latest
+image: nixos/latest
 sources:
   - https://git.sr.ht/~cdo/phal
 tasks:
-  - setup: |
-      curl -sSf https://sh.rustup.rs | sh -s -- -y
-  - build: |
-      source $HOME/.cargo/env
-      cd phal
-      cargo build
   - test: |
-      source $HOME/.cargo/env
       cd phal
-      cargo test
+      nix-shell --run 'cargo test'
